--- a/momentum/index.html
+++ b/momentum/index.html
@@ -19,7 +19,7 @@
         <ul class="play-list"></ul>
       </div>
       <div class="weather">
-        <input type="text" value="Minsk" placeholder="[City]" class="city" />
+        <input type="text" placeholder="[City]" class="city" />
         <i class="weather-icon owf"></i>
         <div class="weather-error"></div>
         <div class="description-container">
