--- a/momentum/index.html
+++ b/momentum/index.html
@@ -11,11 +11,16 @@
   <body>
     <header class="header">
       <div class="player">
+        <div class="music-name"></div>
+        <div class="progress-container">
+          <div class="progress"></div>
+        </div>
         <div class="player-controls">
           <button class="play-prev player-icon"></button>
           <button class="play player-icon"></button>
           <button class="play-next player-icon"></button>
         </div>
+        <div class="music-time"></div>
         <ul class="play-list"></ul>
       </div>
       <div class="weather">
