--- a/momentum/index.html
+++ b/momentum/index.html
@@ -15,12 +15,15 @@
         <div class="progress-container">
           <div class="progress"></div>
         </div>
+        <div class="music-time">
+          <div class="music-curr"></div>
+          <div class="music-dur"></div>
+        </div>
         <div class="player-controls">
           <button class="play-prev player-icon"></button>
           <button class="play player-icon"></button>
           <button class="play-next player-icon"></button>
         </div>
-        <div class="music-time"></div>
         <ul class="play-list"></ul>
       </div>
       <div class="weather">
