done impr_audio

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -23,7 +23,16 @@
           <button class="play-prev player-icon"></button>
           <button class="play player-icon"></button>
           <button class="play-next player-icon"></button>
+          <input
+            id="range"
+            min="0"
+            max="10"
+            value="5"
+            step="0.1"
+            type="range"
+          />
         </div>
+
         <ul class="play-list"></ul>
       </div>
       <div class="weather">
