--- a/momentum/index.html
+++ b/momentum/index.html
@@ -49,6 +49,13 @@
     </header>
     <main class="main">
       <div class="slider-icons">
+        <div class="todo">
+          <h2>TO DO LIST</h2>
+          <input type="text" maxlength="25" id="input" />
+          <button class="btn">Add</button>
+          <button class="btn2">Clear</button>
+          <ul id="result"></ul>
+        </div>
         <button class="slide-prev slider-icon"></button>
         <button class="slide-next slider-icon"></button>
       </div>
