add footer link

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -72,6 +72,15 @@
         <div class="quote"></div>
         <div class="author"></div>
       </div>
+      <div class="info">
+        <p>
+          © 2023 &nbsp &nbsp &nbsp
+
+          <a href="https://github.com/Yury0310">github</a>
+          &nbsp &nbsp &nbsp
+          <a href=" https://rs.school/js-stage0/ ">Rolling Scopes School</a>
+        </p>
+      </div>
     </footer>
     <script src="./js/index.js" type="module"></script>
   </body>
